samples/_failures_safe/1761563697_4e4957_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5f85947.c: In function ‘main’:
./samples/SAFE/__tmp_d5f85947.c:154:23: error: missing terminating " character
  154 |     a.cols = read_int("Enter columns for matrix A (1-8
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d5f85947.c:154:5: error: expected expression at end of input
  154 |     a.cols = read_int("Enter columns for matrix A (1-8
      |     ^
./samples/SAFE/__tmp_d5f85947.c:154:14: error: too few arguments to function ‘read_int’
  154 |     a.cols = read_int("Enter columns for matrix A (1-8
      |              ^~~~~~~~
./samples/SAFE/__tmp_d5f85947.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_d5f85947.c:154:5: error: expected declaration or statement at end of input
  154 |     a.cols = read_int("Enter columns for matrix A (1-8
      |     ^
